# plane-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/skills/build-rust-cli/: SKILL.md
.claude/skills/create-plane-issue/: SKILL.md
.claude/skills/create-pull-request/: SKILL.md
.claude/skills/merge-pull-request/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
config/: settings.json
src/: client.rs  commands.rs  main.rs  settings.rs
tests/: cli.rs
