[package]
name = "plane-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Plane project management"
license = "MIT"
repository = "https://github.com/kimrgrey/plane-cli"
authors = ["Sergei Tsvetkov <tsvetkov@hey.com>"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
