[package]
name = "plane-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for Plane project management"
license = "MIT"
repository = "https://github.com/kimrgrey/plane-cli"
authors = ["Sergei Tsvetkov <tsvetkov@hey.com>"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
serial_test = "3"
temp-env = "0.3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
